modify:modified css

--- a/html&css/style.css
+++ b/html&css/style.css
@@ -6,3 +6,9 @@ h1 {
 body {
   background-color: rgb(218, 246, 246);
 }
+.form {
+  color: burlywood;
+  text-align: center;
+  display: flex;
+  justify-content: last baseline;
+}
